--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-image-magnify": "^2.7.4",
+    "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0"
   },
   "devDependencies": {
